--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,5 @@
 {
+  "apiUrl": "http://localhost:3900/api",
   "genresEndpoint": "http://localhost:3900/api/genres",
   "moviesEndpoint": "http://localhost:3900/api/movies"
 }
