--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,4 @@
 {
   "apiUrl": "http://localhost:3900/api",
-  "genresEndpoint": "http://localhost:3900/api/genres",
-  "moviesEndpoint": "http://localhost:3900/api/movies",
-  "token": "token"
+  "pageSize": 5
 }
